--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "php": "^7.0",
     "ext-json": ">=1.3.7",
     "guzzlehttp/ringphp": "~1.0",
-    "psr/log": "~1.0"
+    "psr/log": "~1.0",
+    "elasticsearch/elasticsearch": "dev-master"
   },
   "require-dev": {
     "cpliakas/git-wrapper": "~1.0",
